# FastAPSP

./: CMakeLists.txt  Makefile  README.md
app/: MoreTaskMpiExample.cpp  README.md  singleNodeExample.cpp
app/scripts/: run.sh
builds/: multiNode_decentralized_path  multiNode_dijkstra  multiNode_improved_memory  multiNode_improved_moreProcess  multiNode_improved_moreTask  multiNode_improved_path  singleNodeCentralized_path  singleNodeImproved_path
fap/: CMakeLists.txt  fap.cpp  fap.h  fap_more_task_mpi.cpp  fap_more_task_mpi.h  kernel.h  utils.h
fap/kernel/: batch_sssp.h  floyd.h  minplus.h
fap/kernel/cuda/: CMakeLists.txt  batch_sssp.cu  cuda_kernel.h  floyd.cu  minplus.cu
fap/kernel/hip/: CMakeLists.txt  batch_sssp.cpp  floyd.cpp  hip_kernel.h  minplus.cpp
fap/utils/: checkResult.h  debug.h  parameter.h  readIdFile.h  readMatFile.h  util_Myalgorithm.h  util_centralized.h  util_dcentralized.h  util_moreProcess.h  util_preprocess.h  util_singleNode.h
graph/unweight-undirected/: luxembourg_osm.mtx
scripts/: run.py
src/app/: multiNode_improved_memory.cpp  multiNode_improved_moreProcess.cpp  multiNode_improved_moreTask.cpp  multiNode_improved_path.cpp
src/benchmark/: singleNodeImproved_path.cpp
src/kernel/: MatMul.h  floyd.h  sssp.h
src/kernel/benchmark/: benchmark_comm.cpp  benchmark_floyd.cpp  benchmark_gemm.cpp  benchmark_sssp.cpp
src/kernel/cuda/: floyd.cu  minplus.cu  sssp.cu  sssp_Nvidia.cu
src/kernel/hip/: floyd.cpp  minplus.cpp  sssp_AMD.cpp
src/solver/: graph_solver.cpp
src/utils/: checkResult.h  debug.h  parameter.cpp  parameter.h  readIdFile.h  readMatFile.h  util_Myalgorithm.h  util_centralized.h  util_dcentralized.h  util_moreProcess.h  util_preprocess.h  util_singleNode.h
test/: myresult.txt  mytest.txt  subtest.txt
